Start listing the bots - beginning of bot post type frontdata

--- a/_posts/2013-05-02-jsconf2013.md
+++ b/_posts/2013-05-02-jsconf2013.md
@@ -28,16 +28,28 @@ JSConf set us up in one of "Omni Amelia Island Plantation Resort's" conference r
  - [Arduino Tinker Kits](http://store.arduino.cc/ww/index.php?main_page=index&cPath=16_17) which included a large collection of sensors, inputs and LEDs.
 
 ## The Software
+At the heart of the nodebot is your code. Libraries you'll want to use might include:
+
+ - [Johnny-Five](https://github.com/rwldrn/johnny-five) a node module that talks [firmata](http://firmata.org/) to your Arduino
+ - [vektor](https://github.com/rockbot/vektor) A robotics-focused linear algebra module
+
+## The Bots!
+We didn't get to see all of them, if your robot isn't here please [tweet](http://localhost:4000/core.html) us or sumbmit a pull request!
+
+### Sumo Bots
+
+ - First Place Winner! [Ueshiba]({% post_url 2013-05-02-ueshiba %}) by Kevin and Max
+ - Second Place Winner! [Torro]({ post_url torro %}) by Charles and Arild
+ - Third Place Winner! [Super Awesome Killa Ninja]({ post_url nnja %}) by Nina and Carl
+ - [Touch Warrior]({ post_url touch %}) by Nhat, Kai and Matt
+ - [The Arduweedont]({ post_url arduweedont %}) by Susan and Glenn
+ - [undefined]({ post_url undefined %}) by Adam
 
 
-  Kits
-  BOE Bots
+### Demo Bots
 
-  Code
-  J5
 
-  Sumo!
-    Teams
+# RAW Notes To delete
       Toro (team and bot)
         flippers -- horns
         Charles Ovando
@@ -51,10 +63,6 @@ JSConf set us up in one of "Omni Amelia Island Plantation Resort's" conference r
       The Arduweedont
         Susan Hinton
         Glenn Gillen
-
-      Youshieba (the inventor of akita)
-        Kevin Grandon
-        Max Wallace
 
       Super Awesome Killa Ninja
         Carl Danley
@@ -88,13 +96,6 @@ Round 5
 Round 6
   flip in 10 torro vs ninja
   torro push out in 10 seconds
-
-Yushebia 1st place
-Torro Second Place
-Ninja Third Place
-
-
-</div>
 
 demo
   RoboCop-Writer
