--- a/_posts/2013-05-02-jsconf2013.md
+++ b/_posts/2013-05-02-jsconf2013.md
@@ -36,6 +36,10 @@ At the heart of the nodebot is your code. Libraries you'll want to use might inc
 ## The Bots!
 We didn't get to see all of them, if your robot isn't here please [tweet](http://localhost:4000/core.html) us or sumbmit a pull request!
 
+## The Team
+There were a ton of participants, and we couldn't have asked for a more
+incredibly inspiring group. Here is the after photo of our organizers.  
+
 ### Sumo Bots
 
  - First Place Winner! [Ueshiba]({% post_url 2013-05-02-ueshiba %}) by Kevin and Max
