--- a/_posts/2013-05-02-ueshiba.md
+++ b/_posts/2013-05-02-ueshiba.md
@@ -1,11 +1,13 @@
 ---
-layout: default
+layout: bots
 title: Ueshiba the NodeBot
 category: bots
 name: Ueshiba
 builders:
   - Kevin Grandon
   - Max Wallace
+parts:
+  - Servos
 description:
   Ueshiba managed to become the first place Sumo champion!  With it's flat bed trap, scooping up
 ---
