Remove all the bots so we have something we can publish, adding the bots as we go.

--- a/_posts/2013-05-02-jsconf2013.md
+++ b/_posts/2013-05-02-jsconf2013.md
@@ -33,131 +33,24 @@ At the heart of the nodebot is your code. Libraries you'll want to use might inc
  - [Johnny-Five](https://github.com/rwldrn/johnny-five) a node module that talks [firmata](http://firmata.org/) to your Arduino
  - [vektor](https://github.com/rockbot/vektor) A robotics-focused linear algebra module
 
-## The Bots!
-We didn't get to see all of them, if your robot isn't here please [tweet](http://localhost:4000/core.html) us or sumbmit a pull request!
-
 ## The Team
 There were a ton of participants, and we couldn't have asked for a more
-incredibly inspiring group. Here is the after photo of our organizers.  
-![](https://raw.github.com/voodootikigod/nodebots/post-jsconf/img/team.JPG)
+incredibly inspiring group. Here is the after photo of our organizers.
+![nodebot team!](https://raw.github.com/voodootikigod/nodebots/post-jsconf/img/team.JPG)
+
+## The Bots!
+We didn't get to see all of them, if your robot isn't here please [tweet](/core.html) us or sumbmit a pull request!
+
 ### Sumo Bots
 
- - First Place Winner! [Ueshiba]({% post_url 2013-05-02-ueshiba %}) by Kevin and Max
- - Second Place Winner! [Torro]({ post_url torro %}) by Charles and Arild
- - Third Place Winner! [Super Awesome Killa Ninja]({ post_url nnja %}) by Nina and Carl
- - [Touch Warrior]({ post_url touch %}) by Nhat, Kai and Matt
- - [The Arduweedont]({ post_url arduweedont %}) by Susan and Glenn
- - [undefined]({ post_url undefined %}) by Adam
+ - First Place Winner! Ueshiba by Kevin and Max
+ - Second Place Winner! Torro by Charles and Arild
+ - Third Place Winner! Super Awesome Killa Ninja by Nina and Carl
+ - Touch Warrior by Nhat, Kai and Matt
+ - The Arduweedont by Susan and Glenn
+ - undefined by Adam
 
 
-### Demo Bots
+### Other Bots
+Coming soon!
 
-
-# RAW Notes To delete
-      Toro (team and bot)
-        flippers -- horns
-        Charles Ovando
-        Arild Shirazi
-
-      Touch Warrior
-        Nhat Vo
-        Kai Groner
-        Matt Dawson
-
-      The Arduweedont
-        Susan Hinton
-        Glenn Gillen
-
-      Super Awesome Killa Ninja
-        Carl Danley
-        Nina Zakharenko
-
-      Undefined
-        Adam McElwee
-
-Round one
-  Torro! (vs Touch Warrior) flip in 20 seconds
-  TIE! (Torro vs Touch Warrior)
-  Torro! Win with a flip and an out
-
-Round 2
-  Yusheiba! in 50 seconds! vs arduweedont
-  Yushebia in 10 seconds!
-
-Round 3
-  Hella Killa flipped Undef half over
-  21 SEconds Hell Kill pushed Undef out!
-  In 15 seconds a flipp and a Kill!
-
-Round 4
-  15 seconds yushebia wins over torro
-  30 seconds yushebia with a push out
-
-Round 5
-  yushebia beats killa 22 seconds push out
-  yushebia beats killa 50 seconds push out
-
-Round 6
-  flip in 10 torro vs ninja
-  torro push out in 10 seconds
-
-demo
-  RoboCop-Writer
-    Angelina Fabbro
-    https://github.com/afabbro/robocopwriter
-
-  brackets bot
-    (NJ) Narciso Jaramillo @notwebsafe
-
-  j5 in the browser
-    tim casawell
-    https://github.com/creationix/firmata-chrome
-
-  helloworld.js
-    typing bot!
-    Mike Surowiec (@mikesurowiec), Bryan Hughes (@nebrius), and Ray Daly (@raydaly)
-    https://www.youtube.com/watch?feature=player_embedded&v=kjTO2OkGnD8
-
-  Little Robot (Gamepad)
-    Stephen Bannasch
-    Found someone that rewrote the
-
-  Kit tachyometer
-
-  Paperless Post Stampy Bot
-    Tyler Larson talltyler (github)
-
-  Not Bot
-    Mike Moulton @mmoulton
-    Tilt phone to drive bot with 3d printed wheels
-
-  Opinion Bot
-    Opinion poll using get user media in a lunch box
-
-  TP Bot
-    Justin
-    Mihael K
-    Bitovi (Sponcer!)
-    Tweets when you have one roll left
-
-  Build enforcer bot
-    When a build fails, it points a red led (soon to be nerf gun) at the person
-    Tim Pettersen
-
-  Missile Defense
-    Rest interface to rubber band guns
-    Andrew Homeyer
-    Matt Parrish
-    Nicholas Boll
-    http://www.youtube.com/watch?v=KgdyrvWOkUo
-
-  Guitar Duino
-    Guitar Hero with pressure sensors that you play and LEDs that you have to follow
-
-Jason
- Linear potentiometer to control a nodecopter's altitude
-
-Twitter
-  Draw Bot
-   @jandet and @domenic
-   https://vine.co/v/bY0PqTnKJqQ
