Removed bad link to parts.md

--- a/_posts/2013-05-02-jsconf2013.md
+++ b/_posts/2013-05-02-jsconf2013.md
@@ -15,8 +15,8 @@ Everyone should thank [Bitovi](http://bitovi.com/) for sponsoring our event. We 
 JSConf set us up in one of Omni Amelia Island Plantation Resort's conference rooms. It was huge, had lots of tables, and was right next to the [NodeCopter Event](http://nodecopter.com/2013/amelia-island/may-30).
 
  - We started our event with a presentation on Johnny-Five, the node library that allows us to control our Arduinos.
- - While we weren't able to give out the parts we can tell you what they were. [JSConf Parts List](parts.md).
  - Some people made use of Kinematics, which [Raquel](https://twitter.com/rockbot) presented to everybody in her [AI.js talk](https://speakerdeck.com/rockbot/ai-dot-js-robots-with-brains) the day before.
+ - While we weren't able to give out the parts we can tell you what they were.
 
 ## The Parts
 
