--- a/_posts/2013-05-02-jsconf2013.md
+++ b/_posts/2013-05-02-jsconf2013.md
@@ -40,7 +40,7 @@ incredibly inspiring group. Here is the after photo of our organizers.
 ![nodebot team!](https://raw.github.com/voodootikigod/nodebots/master/img/team.JPG)
 
 ## The Bots!
-We didn't get to see all of them! If your robot isn't here please [tweet](/core.html) us or sumbmit a pull request!
+We didn't get to see all of them! If your robot isn't here please [tweet](/core.html) us or submit a pull request!
 
 ### Sumo Bots
 
